* Pass ``url_type`` into template's context.
* Make thumbnail naming configurable with ``IMAGE_THUMBNAIL_FORMAT``.
* There is a new plugin category ``Taxonomy`` which allows to easily
  create new taxonomies. Some of the existing taxonomies (authors,
  archives, indexes, page index, sections, tags, and categories)
  have been converted to the new system. (Issue #2107)

New in v7.8.1
=============

Bugfixes
--------

* Rename ``stories`` to ``pages`` in most of the codebase (Issue
  #1891)
* Report missing/unknown dates in posts with filenames
  (Issues #2505, #2506)
* Report filename of post that raised exception when scanning
  (Issue #2505)
* Accept ``page`` and ``pages`` for the ``type`` field in post lists
* Don’t crash if a post list has no posts (Issue #2489)

Features
--------

* Add Hebrew translation by Yitzhak Bar Geva
* Add Chinese (Traditional) ``zh_TW`` translation by Po-Wen Chi
* Add ``nikola theme --list-installed`` (Issue #2504)
* Add ``KATEX_AUTO_RENDER`` setting to configure math delimiters
* Update KaTeX version to 0.6.0: support aligned math display
* Better support for a tree of files in ``data/``

New in v7.8.0
=============

Features
--------

* Exposed ``gist`` as a shortcode (Issue #2459)
* Always copy source files for listings (Issue #2473)
* Detect dependencies in template strings (Issue #2455)
* RSS feeds for sections (Issue #2068)
* New ``data`` metadata that loads data from external files (Issue #2450)
* Shortcode to escape to the template language (Issue #1227)
* Added link to raw file in listings (Issue #1995)
* New NO_DOCUTILS_TITLE_TRANSFORM (Issue #2382)
* Update options of chart directive to Pygal 2.2.3
* Pass global context to template shortcodes (Issue #2424)
* Added new options --html2text and --transform-to-markdown
  to WordPress importer (Issue #2261)
* Listing: guess the lexer if cannot be determined from the file name.
* Read files from data/ and insert data in global context (Issue #2477)

Bugfixes
--------
